tests/negative/misc/improper-module-name.orng
fn main() -> Int { 0 }